--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -357,7 +357,7 @@ input.cal:hover, input.cal:active {background-color: #fffeed;
 
 }
 .da{
-    background-color: blue;
+    background-color: #1f1f1f;
     --background: #E5FFB3;
     --background-accent: #DBF8A3;
     --background-accent-2: #BDE66E;
