--- a/docs/css/guide.css
+++ b/docs/css/guide.css
@@ -2,15 +2,20 @@
 #guideMsgIndex{
     background-color: #555;
     color: white;
-    padding: 16px 20px;
+    padding: 1% 3%;
     border: none;
     cursor: default;
     opacity: 0.8;
     position: fixed;
     bottom: 270px;
-    left: 120px;
+    left: 12%;
     width: 280px;
     height: auto;
+
+    /*moi upte vao xem*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #guideMsgIndex:hover{
@@ -31,6 +36,10 @@
     border-left: 0;
     margin-left: -20px;
     margin-bottom: -40px;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
@@ -59,9 +68,10 @@
     /*cursor: help;*/
     /*opacity: 0.8;*/
     /*position: fixed;*/
-    /*bottom: 20px;*/
+    /*top: 377px;*/
+    /*bottom: 10px;*/
     /*left: 6px;*/
-    /*height:35%;*/
+    /*height:40%;*/
     /*width: 10%;*/
 
 }
@@ -69,27 +79,30 @@
 
 
 .glitch__img {
-    padding: 16px 20px;
+    padding: 12% 6%;
     border: none;
     cursor: help;
     opacity: 0.8;
     position: fixed;
-    top: 377px;
+    top: 50%;
     bottom: 10px;
     left: 6px;
-    height:40%;
-    width: 10%;
+    height:70px;
+    width: 5px;
 
 
     /*top: calc(-1 * var(--gap-vertical));*/
     /*left: calc(-1 * var(--gap-horizontal));*/
     /*width: calc(100% + var(--gap-horizontal) * 2);*/
     /*height: calc(100% + var(--gap-vertical) * 2);*/
-    background: url(../img/2b_Best_Vector_Croped.png) no-repeat ;
+    background: url(../img/2b_Best_Vector_Croped.png) no-repeat center;
     background-color: var(--blend-color-1);
     transform: translate3d(0,0,0);
+    /*background-position: center;*/
+
+    /*background-size: 150px, 200px;*/
     background-size: cover;
-    background-position: center;
+    /*thay the cho background-size:cover*/
 
 
 }
