--- a/docs/css/guide.css
+++ b/docs/css/guide.css
@@ -7,11 +7,12 @@
     cursor: default;
     opacity: 0.8;
     position: fixed;
-    bottom: 270px;
+    bottom: 50%;
     left: 12%;
-    width: 280px;
+    width: 20%;
     height: auto;
 
+    font-size: 100%;
     /*moi upte vao xem*/
     background-position: center;
     background-repeat: no-repeat;
